src/test/deca/context/valid/Obj/this.deca
// Description:
//    Utilisation du this au sein d'une classe
//
// Résultat:
//    Succès
//
class A {
    int a;
    void methode(){
        this.a = 5;
    }
}
{}